# slos

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  bors.toml  build.rs  crates.js  index.html  search-index.js  settings.html  shell.nix  source-files.js
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: gh-pages.yml  test.yml
crates/slos-filesystem/: Cargo.toml
crates/slos-filesystem/src/: errors.rs  lib.rs  memory.rs  pakfs.rs  path.rs
crates/slos-filesystem/src/impls/: mod.rs  overlayfs.rs  pakfs.rs  simplememoryfs.rs
crates/slos-filesystem/tests/: test_overlayfs.rs  test_pakfs.rs
crates/slos-filesystem/tests/data/pak/: test.pak
crates/slos-filesystem/tests/macros/: mod.rs  mount_tests.rs  read_tests.rs  write_tests.rs
crates/slos-hal/: Cargo.toml
crates/slos-hal/src/: lib.rs  null_console.rs
crates/slos-hal/src/null_system/: console.rs  mod.rs  tests.rs
crates/slos-helpers/: Cargo.toml
crates/slos-helpers/src/: lib.rs  macros.rs  staticcollection.rs  timer.rs  unsafecontainer.rs
crates/slos-hosted/: Cargo.toml
crates/slos-hosted/src/: lib.rs  main.rs
crates/slos-hosted/src/hal/: console.rs  interrupts.rs  mod.rs
crates/slos-hosted/src/host/: interrupts.rs  mod.rs
crates/slos-hosted/src/repl/: cmd_basics.rs  cmd_filesystem.rs  context.rs  mod.rs
crates/slos-log/: Cargo.toml
crates/slos-log/src/: lib.rs  macros.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/convert/: trait.From.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  (+4 more)
implementors/lazy_static/: trait.LazyStatic.js
implementors/slos_filesystem/: trait.FsDirectory.js  trait.FsFile.js  trait.FsFileHandle.js  trait.FsNode.js  trait.FsReadDir.js  trait.FsRoot.js  trait.FsWriteDir.js
implementors/slos_hal/: trait.SystemConsole.js  trait.SystemCpu.js  trait.SystemHardware.js  trait.SystemKmainHooks.js
nix/: rust-overlay.nix  rust.nix  sources.json
slos/: all.html  enum.KernelError.html  fn.current_system.html  fn.init.html  fn.kmain.html  index.html  sidebar-items.js  struct.KMAIN_INIT_PARTIALS.html  struct.KMAIN_LOOP_PARTIALS.html  type.KmainPartial.html
slos/alloc_prelude/: index.html  struct.Box.html  struct.String.html  struct.Vec.html  trait.ToOwned.html  trait.ToString.html
slos/clock/: constant.CLOCK_TICK_WARN_MS.html  constant.CLOCK_TICK_WARN_THRESHOLD.html  fn.init.html  fn.on_tick.html  fn.treat_as_unstable.html  index.html  sidebar-items.js  static.CLOCK_TICK_WARN_COUNT.html  static.CLOCK_UNSTABLE.html  struct.BOOT_CLOCK.html
slos/errors/: enum.KernelError.html
slos/filesystem/: fn.fopen.html  fn.init.html  index.html  sidebar-items.js  struct.FSBASE.html
slos_filesystem/: all.html  enum.FsError.html  enum.MountError.html  fn.traverse_node.html  index.html  sidebar-items.js  struct.FilesystemBase.html  struct.FilesystemMountpoint.html  trait.FsDirectory.html  trait.FsFile.html  trait.FsFileHandle.html  trait.FsNode.html  trait.FsReadDir.html  trait.FsRoot.html  trait.FsWriteDir.html
slos_filesystem/errors/: enum.FsError.html  enum.MountError.html
slos_filesystem/impls/: index.html  sidebar-items.js
slos_filesystem/memory/: index.html  sidebar-items.js  struct.SimpleMemoryFs.html  struct.SimpleMemoryFsFile.html
slos_filesystem/pakfs/: index.html  sidebar-items.js  struct.PakFilesystem.html  struct.PakFilesystemFile.html
slos_filesystem/path/: constant.PATH_SEPARATOR.html  fn.join.html  fn.normalize.html  fn.split.html  index.html  sidebar-items.js
slos_hal/: all.html  index.html  sidebar-items.js  trait.SystemConsole.html  trait.SystemCpu.html  trait.SystemHardware.html  trait.SystemKmainHooks.html
slos_hal/null_console/: index.html  sidebar-items.js  struct.NULL_CONSOLE.html  struct.NullConsole.html
slos_hal/null_system/: index.html  sidebar-items.js  struct.NULL_CONSOLE.html  struct.NullConsole.html  struct.NullSystem.html  struct.SYSTEM.html
slos_helpers/: all.html  index.html  macro.function.html  sidebar-items.js  struct.StaticCollection.html  struct.Timer.html  struct.UnsafeContainer.html
slos_helpers/staticcollection/: struct.StaticCollection.html
slos_helpers/timer/: struct.Timer.html
slos_helpers/unsafecontainer/: struct.UnsafeContainer.html
slos_hosted/: all.html  index.html  sidebar-items.js
slos_hosted/hal/: index.html  sidebar-items.js  struct.HostedSystem.html  struct.SYSTEM.html
slos_hosted/host/: fn.hosted_kmain.html  fn.init.html  fn.run_kernel.html  index.html  sidebar-items.js
slos_hosted/repl/: fn.default_cmds.html  fn.run_repl.html  index.html  sidebar-items.js  struct.Context.html  type.Callback.html
slos_log/: all.html  index.html  macro.debug.html  macro.error.html  macro.info.html  macro.log.html  macro.trace.html  macro.warn.html  sidebar-items.js
src/: clock.rs  errors.rs  lib.rs
src/filesystem/: devices.rs  mod.rs
src/slos/: clock.rs.html  errors.rs.html  lib.rs.html
src/slos_filesystem/: errors.rs.html  lib.rs.html  memory.rs.html  pakfs.rs.html  path.rs.html
src/slos_hal/: lib.rs.html  null_console.rs.html
src/slos_helpers/: lib.rs.html  macros.rs.html  staticcollection.rs.html  timer.rs.html  unsafecontainer.rs.html
src/slos_hosted/: lib.rs.html
src/slos_log/: lib.rs.html  macros.rs.html
(+68 files in other folders)
