cargo-features = ["edition2021"]

[package]
edition = "2021"
name = "slos-hosted"
version = "0.0.1-dev.1"
license = "BSD-2-Clause-Patent"

[features]
repl = [ "dep:rustyline" ]
default = [ "repl" ]

[dependencies]
slos = { path = "../..", features = [ ] }
slos-helpers = { path = "../slos-helpers", features = [ "std" ] }
slos-filesystem = { path = "../slos-filesystem", features = [ "std" ] }
slos-hal = { path = "../slos-hal", features = [ "std" ] }
lazy_static = { version = "1.4" }
rustyline = { version = "8.2.0", optional = true }
shlex = { version = "1.0.0" }
anyhow = { version = "1.0.0" }
signal-hook = { version = "0.3.9", features = [ "extended-siginfo" ] }
log = { version = "0.4.14", features = [ "std" ] }
simple_logger = { version = "1.13.0", features = [ "stderr" ] }

[[bin]]
name = "slos-hosted"

[[bin]]
name = "slos-hosted-repl"
required-features = [ "repl" ]
