cargo-features = ["edition2021"]

[package]
edition = "2021"
name = "slos-hosted"
version = "0.0.1-dev.1"
license = "BSD-2-Clause-Patent"
resolver = "2"
default-run = "slos-hosted"
autobins = false

[features]
init_examples = [ "slos/init_examples" ] 
repl = [ "dep:rustyline" ]
default = [ "repl" ]

[dependencies]
slos = { path = "../..", features = [ ] }
slos-helpers = { path = "../slos-helpers", features = [ "std" ] }
slos-filesystem = { path = "../slos-filesystem", features = [ "std" ] }
slos-hal = { path = "../slos-hal", features = [ "std" ] }
slos-log = { path = "../slos-log", features = [ "std" ] }
lazy_static = { version = "1.4" }
rustyline = { version = "8.2.0", optional = true }
shlex = { version = "1.0.0" }
anyhow = { version = "1.0.0" }
signal-hook = { version = "0.3.9", features = [ "extended-siginfo" ] }
log = { version = "0.4.14", features = [ "std" ] }
env_logger = { version = "0.9.0" }

[[bin]]
name = "slos-hosted"

[[bin]]
name = "slos-hosted-repl"
required-features = [ "repl" ]
