cargo-features = ["edition2021"]

[package]
edition = "2021"
name = "slos-hosted"
version = "0.0.1-dev.1"
license = "BSD-2-Clause-Patent"
resolver = "2"

[features]
init_examples = [ "slos/init_examples" ]
default = [ ]

[dependencies]
slos = { path = "../..", features = [ ] }
slos-helpers = { path = "../slos-helpers", features = [ "std" ] }
slos-filesystem = { path = "../slos-filesystem", features = [ "std" ] }
slos-hal = { path = "../slos-hal", features = [ "std" ] }
slos-log = { path = "../slos-log", features = [ "std" ] }
log = { version = "0.4.14", features = [ "std" ] }
env_logger = { version = "0.9.0" }
lazy_static = { version = "1.4" }
anyhow = { version = "1.0.0" }
rustyline = { version = "8.2.0" }
shlex = { version = "1.1.0" }
signal-hook = { version = "0.3.9", features = [ "extended-siginfo" ] }
structopt = { version = "0.3" }
