cargo-features = ["edition2021"]

[package]
edition = "2021"
name = "slos-log"
version = "0.0.1-dev.1"
license = "BSD-2-Clause-Patent"
resolver = "2"

[features]
std = [ "log/std", "slos-helpers/std" ]
default = [ ]

[dependencies]
slos-helpers = { path = "../slos-helpers" }
log = { version = "0.4.14", default-features = false }
